Update canary strategy pause duration

--- a/v1.8.3/yaml/canarystrategy-rollouts-v1alpha1.yaml
+++ b/v1.8.3/yaml/canarystrategy-rollouts-v1alpha1.yaml
@@ -36,27 +36,15 @@ properties:
           properties:
             duration:
               type:
-                - object
+                - string
+                - integer
                 - "null"
-              properties:
-                type:
-                  type:
-                    - string
-                    - "null"
-                  format: int64
-                intVal:
-                  type:
-                    - integer
-                    - "null"
-                  format: int32
-                strVal:
-                  type:
-                    - string
-                    - "null"
               description: |-
-                +protobuf=true
-                +protobuf.options.(gogoproto.goproto_stringer)=false
-                +k8s:openapi-gen=true
+                Pause the rollout for the specified duration.
+              examples:
+                - 30s
+                - 5m
+                - 1h
               title: |-
                 IntOrString is a type that can hold an int32 or a string.  When used in
                 JSON or YAML marshalling and unmarshalling, it produces or consumes the
